# wgpu-base

./: Cargo.toml  README.md  build.rs
assets/shaders/: shader.wgsl
src/: app.rs  backend.rs  light.wgsl  model.rs  render.rs  resources.rs  texture.rs
src/render_lib/: assets.rs  backend.rs  camera.rs  error.rs  mod.rs  model.rs  resources.rs  texture.rs
