[package]
name = "wgpu-base"
version = "0.1.0"
edition = "2024"

[lib]
name = "wgpu_base"
path = "src/lib.rs"

[[bin]]
name = "wgpu_template"
path = "src/app.rs"

[dependencies]
anyhow = "1.0.100"
bytemuck = { version = "1.23.2", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.11.8"
image = { version = "0.25.8", default-features = false, features = [
    "png",
    "jpeg",
] }
log = "0.4.28"
pollster = "0.4.0"
tobj = { version = "4.0.3", default-features = false, features = ["async"] }
wgpu = "26.0.1"
winit = "0.30.12"

[build-dependencies]
anyhow = "1.0.100"
fs_extra = "1.3.0"
glob = "0.3.3"
