[package]
name = "wgpu-base"
version = "0.1.1"
edition = "2024"

[lib]
name = "render_lib"
path = "src/render_lib/mod.rs"

[[bin]]
name = "wgpu_template"
path = "src/app.rs"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.23", features = ["derive"] }
cgmath = "0.18"
env_logger = "0.11"
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
] }
log = "0.4"
pollster = "0.4"
thiserror = "2.0"
tobj = { version = "4.0", default-features = false, features = ["async"] }
wgpu = "27"
winit = "0.30"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.3"
glob = "0.3"
